--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/Ernakulam/800px-Container_terminal.jpeg" class="d-block w-100" alt="...">
+                    <img src="IMAGES/Iduki.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Ernakulam</h5>
                       <p>Container Terminal</p>
