--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="IMAGES/Iduki.jpg" class="d-block w-100" alt="...">
+                    <img src="Ernakulam/800px-Container_terminal.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Ernakulam</h5>
                       <p>Container Terminal</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/Ernakulam/800px-Ernakulam_Shiva_Temple_during_one_of_its_festival_days.jpg" class="d-block w-100" alt="...">
+                    <img src="Ernakulam/800px-Ernakulam_Shiva_Temple_during_one_of_its_festival_days.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Thrissur</h5>
                       <p>Guruvayoor Temple</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/Ernakulam/800px-Kochi_Skyline.jpg" class="d-block w-100" alt="...">
+                    <img src="Ernakulam/800px-Kochi_Skyline.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Thiruvananthapuram</h5>
                       <p></p>
