--- a/LoginPage.html
+++ b/LoginPage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-<link rel="stylesheet" href="/CSS/loginpage.css">
+<link rel="stylesheet" href="CSS/loginpage.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -61,7 +61,7 @@
     <h1>Login</h1>
     <br>
     <div>
-        <img src="/IMAGES/contact-icon.png" alt="picture" width="50p" height="50p">
+        <img src="IMAGES/contact-icon.png" alt="picture" width="50p" height="50p">
         <br>
         <label><h3> E-mail</h3></label>
         <br>
