--- a/LoginPage.html
+++ b/LoginPage.html
@@ -12,7 +12,9 @@
 
 </head>
 <body>
-
+<div>
+  <img src="IMAGES/Login.jpg" alt="" width="100%" height="100%">
+</div>
     !--homaepage starts-->
                 <div>
                     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-success">
