--- a/LoginPage.html
+++ b/LoginPage.html
@@ -12,9 +12,8 @@
 
 </head>
 <body>
-<div>
-  <img src="IMAGES/Login.jpg" alt="" width="100%" height="100%">
-</div>
+<div style= "background-image:url('IMAGES/Login.jpg');">
+
     !--homaepage starts-->
                 <div>
                     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-success">
